[package]
name = "cgroups"
version = "0.1.0"
authors = ["Julius Michaelis <gitter@liftm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups = "0.1.0"
failure = "0.1.6"
prometheus_exporter = "0.4.1"
prometheus = "0.7.0"
structopt = "0.3.8"
pathdiff = "0.1.0"
